<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOptionsActivity"
    android:background="@drawable/loginoption_bg">
    
    
    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/round_close_24"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:contentDescription="@string/close_button"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/smartchick"
                android:adjustViewBounds="true"
                android:contentDescription="@string/chicken"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginGoogleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:minHeight="@dimen/m_button_height"
                android:layout_marginBottom="10dp"
                android:text="@string/continue_with_google"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginPhonebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:minHeight="@dimen/m_button_height"
                android:layout_marginBottom="10dp"
                android:text="@string/continue_with_phone"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginEmailbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:minHeight="@dimen/m_button_height"
                android:text="@string/continue_with_Email"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>